--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,7 @@
 #root {
-  max-width: 1280px;
+  max-width: 100vw;
   margin: 0 auto;
-
   text-align: center;
   height: 100vh;
+  padding: 5px;
 }
-
